<resources>
    <string name="app_name">Android Fundamental</string>
    <string name="pr1_2_3">PR 1, 2, 3</string>
    <string name="pr4">RecyclerView</string>
    <string name="databinding">DataBinding</string>
    <string name="fragments">Fragments</string>
    <string name="view_model">View Model</string>
    <string name="list_view">List View</string>
    <string name="item_action">item_action</string>
    <string name="selection">selection</string>
    <string name="undo">Undo</string>
    <string name="two_items">Two Items</string>
    <string name="hello_world">hello</string>
    <string name="expandable_list">Expandable list</string>
    <string name="spinner">Spinner</string>
    <string-array name="operating_systems">
        <item>Ubuntu</item>
        <item>Android</item>
        <item>iOS</item>
    </string-array>
    <string name="custom_fragment">Custom Fragment</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="dialog_fragments">Dialog Fragments</string>
    <string name="retrofit">Retrofit</string>
    <string name="check_internet">Verify Internet</string>
    <string name="android_fundamental">Android Fundamental</string>
    <string name="fragments_toolbar">Fragments and Toolbar</string>
    <string name="android_network">Android Network</string>
    <string name="handler">handler</string>
    <string name="asynctask">AsyncTask</string>
    <string name="trophy">Trophy</string>
    <string name="skills">Skills</string>
    <string name="room">Room</string>
    <string name="content_provider">Content Provider</string>
    <string name="rx_java">RxJava</string>
    <string name="scheduler">Scheduler</string>
    <string name="github">Github</string>
    <string name="error">Error</string>
    <string name="mvp">MVP</string>
    <string name="show_repositories">Repositories</string>
    <string name="name">Name</string>
    <string name="owner">Owner</string>
    <string name="url">url</string>
    <string name="ok">Ok</string>
    <string name="preferences">Preferences</string>
    <string name="wallpaper_description">wallpaper</string>
    <string name="wallpaper">wallpaper</string>
    <string name="widget">Widget</string>
    <string name="customview">Custom View</string>
    <string name="menu_settings">Settings</string>
    <string name="animation">Animation</string>
    <string name="drawable">Drawable</string>
    <string name="drag">Drag</string>
    <string name="services">Services</string>
    <string name="app_name_trace">Traceview Example</string>
    <string name="trace">Traceview Example</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world_trace">Hello world!</string>
    <string name="number_template"><b>Random number: %1$s</b></string>
</resources>